popup page css html completed, typescript has solved problems but not tested yet

--- a/index.html
+++ b/index.html
@@ -13,22 +13,28 @@
         <section class="book__group">
         </section>
         <aside class="popup__book__details">
-            <section class="book__frame">
-                <h2 class="book__title"></h2>
-                <p class="book_author"></p>
-            </section>
-            <section class="book__intro">
-                <artice class="name"></artice>
-                <article class="author"></article>
-                <article class="abstract"></article>
-                <article class="details__frame">
-                    <section class="audience"></section>
-                    <section class="first__publised"></section>
-                    <section class="pages"></section>
-                    <section class="publisher"></section>
-                </article>
-                <button>Oh,I want to read it!</button>
-            </section>
+            <article class="popup__frame">
+                <img class="return__button" src="./img/back.png"></img>
+                <section class="book__frame">
+                    <h2 class="book__title"></h2>
+                    <p class="book__author"></p>
+                </section>
+                <section class="book__intro">
+                    <article class="author__frame">
+                        <h2 class="detail__name"></h2>
+                        <p class="detail__author"></p>
+                    </article>
+                    <p class="abstract"></p>
+                    <article class="details__frame">
+                        <p class="audience"></p>
+                        <p class="first__published"></p>
+                        <p class="pages"></p>
+                        <p class="publisher"></p>
+                    </article>
+                    <button class="read__btn">Oh,I want to read it!</button>
+                </section>
+            </article>
+         
         </aside>
     </div>
 </body>
