completed popup page without module. module doesn't work, it will cause CORS problem on my laptop

--- a/index.html
+++ b/index.html
@@ -16,20 +16,21 @@
             <article class="popup__frame">
                 <img class="return__button" src="./img/back.png"></img>
                 <section class="book__frame">
+                    <aside class="popup__book__line"></aside>
                     <h2 class="book__title"></h2>
                     <p class="book__author"></p>
                 </section>
                 <section class="book__intro">
                     <article class="author__frame">
                         <h2 class="detail__name"></h2>
-                        <p class="detail__author"></p>
+                        <p class="detail__author">By</p>
                     </article>
                     <p class="abstract"></p>
                     <article class="details__frame">
-                        <p class="audience"></p>
-                        <p class="first__published"></p>
-                        <p class="pages"></p>
-                        <p class="publisher"></p>
+                        <p class="audience"><b>Audience:</b></p>
+                        <p class="first__published"><b>First Published:</b></p>
+                        <p class="pages"><b>Pages:</b></p>
+                        <p class="publisher"><b>Publisher:</b></p>
                     </article>
                     <button class="read__btn">Oh,I want to read it!</button>
                 </section>
