searchbar cannot work

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
     <div class="wrapper">
-        <h1 class="title">8 Classic Childrens books</h1>
+        <section class="header">
+            <h1 class="title">8 Classic Childrens books</h1>
+            <section class="input__group">
+                <input type="text" id="input__frame">
+                <button class="input__button">Search</button>
+            </section>
+        </section>
+       
         <section class="book__group">
         </section>
         <aside class="popup__book__details">
