search bar cannot work yet. fixed popup page has no publisher/audience/pages/first published titles problems

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="wrapper">
         <section class="header">
             <h1 class="title">8 Classic Childrens books</h1>
-            <section class="input__group">
+            <!-- <section class="input__group">
                 <input type="text" id="input__frame">
                 <button class="input__button">Search</button>
-            </section>
+            </section> -->
         </section>
        
         <section class="book__group">
@@ -30,14 +30,14 @@
                 <section class="book__intro">
                     <article class="author__frame">
                         <h2 class="detail__name"></h2>
-                        <p class="detail__author">By</p>
+                        <p class="detail__author"></p>
                     </article>
                     <p class="abstract"></p>
                     <article class="details__frame">
-                        <p class="audience"><b>Audience:</b></p>
-                        <p class="first__published"><b>First Published:</b></p>
-                        <p class="pages"><b>Pages:</b></p>
-                        <p class="publisher"><b>Publisher:</b></p>
+                        <p class="audience"></p>
+                        <p class="first__published"></p>
+                        <p class="pages"></p>
+                        <p class="publisher"></p>
                     </article>
                     <button class="read__btn">Oh,I want to read it!</button>
                 </section>
